--- a/zuri2.css
+++ b/zuri2.css
@@ -1,11 +1,16 @@
 body{
     background-color: #FFFDF5;
+    font-family: 'Lexend', sans-serif;
 }
 
 .nav{
     background-color: #FFFDF5;
-    position:sticky;
+    position:static;
     margin-bottom: 9rem;
+}
+
+.pic{
+    margin-top: 1rem;
 }
 
 ul{
@@ -21,6 +26,14 @@ a{
     text-decoration: none;
 }
 
+.a{
+    color:#5E5E5F;
+    font-size:20px
+}
+
+.RM{
+    color:green
+}
 .s-end{
 /* margin-left: 30rem; */
 text-align: center;
@@ -161,16 +174,19 @@ padding: 5rem 1rem;
 .l1-6{
 font-size: 40px;
 font-weight: bold;
+color: #5E5E5F;
 }
 
 .lv2{
 font-size: 29px;
 font-weight: bold;
+color:#5E5E5F;
 }
 
 .lv3{
 font-size: 20px;
 font-weight: bold;
+color:#5E5E5F;
 }
 
 .l1-1{
@@ -251,6 +267,7 @@ margin:-29.7rem 0 0 55rem;
 .red-sec{
 background-color: #E7332B;
 margin:0 -0.5rem;
+padding-bottom: -2rem;
 }
 
 .sec-5w{
@@ -295,11 +312,10 @@ margin:-1rem 0 0 5rem;
 }
 
 .hand{
-    margin:-100rem 0 0 0rem;
-    position:relative;
+    margin:0 0 0;
 }
 
-.mentor{
+/* .mentor{
 
 }
 
@@ -308,7 +324,7 @@ margin:-1rem 0 0 5rem;
 
 .games{
 
-}
+} */
 
 .bs-5{
     border:2px solid #FFFFFF;
@@ -328,9 +344,8 @@ margin:-1rem 0 0 5rem;
     background-color: #E7332B;
     color: #FFFFFF;
     font-size: 20px;
-    padding: 1rem 2rem 1rem 4rem;
-
-    margin: -9.2rem 0 0 15rem;
+    padding: 1rem 2rem 1rem 6rem;
+    margin: -13.2rem 0 0 18rem;
     position: absolute;
 
 }
@@ -341,8 +356,8 @@ margin:-1rem 0 0 5rem;
     background-color: #E7332B;
     color: #FFFFFF;
     font-size: 20px;
-    padding: 1rem 2rem 1rem 4rem;
-    margin: -3.3rem 0 0 -3rem;
+    padding: 1rem 2rem 1rem 5rem;
+    margin: -13.3rem 0 0 5rem;
     position: absolute;
 
 }
@@ -353,20 +368,99 @@ margin:-1rem 0 0 5rem;
     background-color: #E7332B;
     color: #FFFFFF;
     font-size: 20px;
-    padding: 1rem 2rem 1rem 4rem;
+    padding: 1rem 2rem 1rem 5rem;
 
-    margin: -3.3rem 0 0 6.5rem;
+    margin: -17.3rem 0 0 18.5rem;
     position: absolute;
 
 }
 
+.SOP{
+    color:#E7332B;
+    font-size: 30px;
+    margin:2rem 0 0 5rem;
+}
+.exp{
+    margin:1rem 0 0 5rem;
+    font-size: 45px;
+}
 
+.sec6{
+width:10%;
+margin:0 0 0 40rem;
+}
 
+.l1{
+font-size: 20px;
+}
 
+.l2{
+font-size:18px;
+}
 
+.c{
+width: 23%;
+background-color: #FFFFFF;
+margin:0 0 0 5rem; 
+border:1px solid #FFFFFF;
+border-radius:3rem;
+padding:3rem 0 3rem 1rem;
+}
 
+.d{
+    width: 23%;
+    background-color: #FFFFFF;
+    margin:0 0 0 5rem; 
+    border:1px solid #FFFFFF;
+    border-radius:3rem;
+    padding:3rem 0 3rem 1rem;
+}
 
+.e{
+    width: 23%;
+    background-color: #FFFFFF;
+    margin:0 0 0 5rem; 
+    border:1px solid #FFFFFF;
+    border-radius:3rem;
+    padding:3rem 0 3rem 1rem;
+}
+.f{
+    width: 23%;
+    background-color: #FFFFFF;
+    margin:0 0 0 5rem; 
+    border:1px solid #FFFFFF;
+    border-radius:3rem;
+    padding:3rem 0 3rem 1rem;
+}
+.g{
+    width: 23%;
+    background-color: #FFFFFF;
+    margin:0 0 0 5rem; 
+    border:1px solid #FFFFFF;
+    border-radius:3rem;
+    padding:3rem 0 3rem 1rem;
+}
 
+.h{
+    width: 23%;
+    background-color: #FFFFFF;
+    margin:0 0 0 5rem; 
+    border:1px solid #FFFFFF;
+    border-radius:3rem;
+    padding:3rem 0 3rem 1rem;
+}
 
-
-
+.training-enroll{
+    background-color: #E7332B;
+    margin:0 0 0 34rem;
+    padding: 1rem 3rem;
+    border:1px solid #E7332B;
+    border-radius: 3rem;
+    color:#FFFFFF;
+    font-size:20px;
+}
+    
+.hr{
+border-top: 1px #818185;
+margin: 3rem 5rem;
+    }
